Fix off-by-one for cpuCount on Linux

cpuCount is based on cpu indices, which means we will be one lower than
the actual CPU count. So correct for that.

BUG: 435062
FIXED-IN: 5.22